<resources>
    <string name="app_name">塔联社</string>
    <string name="mobile">手机号码</string>
    <string name="account">登录账号</string>
    <string name="account_login">账号登录</string>
    <string name="mobile_login">手机登录</string>
    <string name="login">登录</string>
    <string name="login_password">登录密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="choose_school">选择学校</string>
    <string name="search">搜索</string>
    <string name="search_null">无搜索结果</string>
    <string name="captcha">验证码</string>
    <string name="sms_captcha">短信验证码</string>
    <string name="get_captcha">获取验证码</string>
    <string name="reget_captcha">重新获取验证码</string>
    <string name="input_mobile_tip">请输入手机号码</string>
    <string name="input_captcha_tip">请输入短信验证码</string>
    <string name="bind_mobile">绑定手机</string>
    <string name="activate_account">激活账号</string>
    <string name="full_name">姓名</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="input_full_name_tip">请输入您的真实姓名</string>
    <string name="input_password_tip">请输入密码（6-16个字符数字+字母组合）</string>
    <string name="input_password_confirm_tip">请再次输入密码</string>
    <string name="reset_password">重置密码</string>
    <string name="input_login_password_tip">重置密码</string>
    <string name="commit">提交</string>
    <string name="bind_mobile_tip">提示：绑定手机号可直接用手机号码登录</string>
    <string name="current_bind_mobile_tip">当前绑定手机号码:</string>
    <string name="change_mobile_tip">提示：更换手机后，下次登录可直接用新号码登录</string>
    <string name="submit">提交</string>
    <string name="home">首页</string>
    <string name="moment">动态</string>
    <string name="contacts">通讯录</string>
    <string name="mine">我的</string>
    <string name="association_detail">社团详情</string>
    <string name="association_all">全部社团</string>
    <string name="association_mine">我的社团</string>
    <string name="association_follow">关注的社团</string>
    <string name="association_jion">加入的社团</string>
    <string name="activity_all">全部活动</string>
    <string name="activity_mine">我的活动</string>
    <string name="activity_follow">关注的活动</string>
    <string name="activity_jion">加入的活动</string>
    <string name="association_logo">社团logo</string>
    <string name="association_level">社团级别</string>
    <string name="association_name">社团名称</string>
    <string name="school_level">校级</string>
    <string name="college_level">学院级</string>
    <string name="association_slogan">社团口号</string>
    <string name="association_tag">社团标签</string>
    <string name="association_choose_tag">选择社团标签</string>
    <string name="association_tag_limit">最多可选择3个标签</string>
    <string name="association_tag_custom">+自定义</string>
    <string name="association_choose_tutor">选择导师</string>
    <string name="tutor_info">导师信息</string>
    <string name="tutor_id">教师工号</string>
    <string name="tutor_job_position">职称</string>
    <string name="work_experience">工作经历</string>
    <string name="association_create_apply_success">\t创建申请提交成功\n请您耐心等待平台审核&#8230;</string>
    <string name="association_choose_tutor_tip">选择导师</string>
    <string name="association_set_tutor_leader">设为主导</string>
    <string name="association_number_limit">人数限制</string>
    <string name="association_desc">社团简介</string>
    <string name="association_function">社团职能</string>
    <string name="association_vision">社团构想</string>
    <string name="association_plan">社团规划</string>
    <string name="input_association_name_tip">请输入社团名称</string>
    <string name="input_association_slogan_tip">请输入社团口号</string>
    <string name="input_association_tag_tip">请选择社团标签</string>
    <string name="input_association_mumber_tip">“0”为不限人数</string>
    <string name="input_association_desc_tip">请描述您的社团</string>
    <string name="input_association_function_tip">请描述社团的职能</string>
    <string name="input_association_vision_tip">请描述社团的构想</string>
    <string name="input_association_plan_tip">请描述社团的规划</string>
    <string name="input_search_association_key_tip">输入关键字搜索社团</string>
    <string name="input_search_activity_key_tip">输入关键字搜索活动</string>
    <string name="next_step">下一步</string>
    <string name="base_info">基本信息</string>
    <string name="photos">相册</string>
    <string name="member">成员</string>
    <string name="member_info">成员信息</string>
    <string name="personal_info">个人信息</string>
    <string name="class_in_grade">班级</string>
    <string name="college">所在学院</string>
    <string name="create_association">创建社团</string>
    <string name="publish_activity">发布活动</string>
    <string name="apply_job">申请职位</string>
    <string name="more">More</string>
    <string name="hot_association">热门社团</string>
    <string name="association">社团</string>
    <string name="activity">活动</string>
    <string name="activity_name">活动名称</string>
    <string name="input_activity_name_tip">请输入活动名称最多30个字</string>
    <string name="activity_association">活动社团</string>
    <string name="input_activity_association_tip">请选择社团</string>
    <string name="activity_type">活动类型</string>
    <string name="input_activity_type_tip">请选择活动类型</string>
    <string name="plan_activity_type">请选择活动类型</string>
    <string name="plan_numm">预计人数</string>
    <string name="input_plan_numm_tip">请输入活动人数</string>
    <string name="cost_source">费用来源</string>
    <string name="activity_album">活动相册</string>
    <string name="input_cost_source_tip">请选择费用来源</string>
    <string name="cost_self">自筹</string>
    <string name="cost_self_source">自&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;筹</string>
    <string name="cost_school">学校拨款</string>
    <string name="cost_business">商家赞助</string>
    <string name="cost_multi">混合方式</string>
    <string name="cost_self_holder">自筹：%1$s元</string>
    <string name="cost_school_holder">学校拨款：%1$s元</string>
    <string name="cost_business_holder">商家赞助：%1$s元</string>
    <string name="cost_multi_holder">混合方式：%1$s元</string>
    <string name="activity_desc">活动简介</string>
    <string name="input_activity_desc_tip">请描述活动</string>
    <string name="activity_start_time">活动开始时间</string>
    <string name="input_activity_time_tip">请选择活动时间</string>
    <string name="activity_end_time">活动结束时间</string>
    <string name="activity_registration_start_time">报名开始时间</string>
    <string name="input_activity_registration_time_tip">请选择报名时间</string>
    <string name="activity_registration_end_time">报名结束时间</string>
    <string name="activity_address">活动地点</string>
    <string name="input_activity_address_tip">请选择活动地点</string>
    <string name="activity_before_start">活动开始前</string>
    <string name="activity_before_end">分钟开始签到</string>
    <string name="activity_recommend">活动推荐</string>
    <string name="remarks">备注</string>
    <string name="activity_area">区域</string>
    <string name="reset">重置</string>
    <string name="order">预约</string>
    <string name="input_search_activity_address_key_tip">输入关键字搜索场地</string>
    <string name="yuan">元</string>
    <string name="indoor">室内</string>
    <string name="outdoor">室外</string>
    <string name="address_info">场地信息</string>
    <string name="order_time">预约时间</string>
    <string name="accommodate_num">场地可容纳人数：%1$s人</string>
    <string name="useable_time">可使用时段：%1$s — %2$s</string>
    <string name="mic">麦克风：%1$s</string>
    <string name="led_screen">LED屏幕：%1$s</string>
    <string name="input_project">投影机：%1$s</string>
    <string name="input_screen">幕布：%1$s</string>
    <string name="equipment">音响：%1$s</string>
    <string name="input_table_num">桌位：%1$s</string>
    <string name="input_chair_num">椅位：%1$s</string>
    <string name="input_banner_num">横幅位：%1$s</string>
    <string name="input_vertical_banner_num">竖幅位：%1$s</string>
    <string name="input_tent_num">帐篷位：%1$s</string>
    <string name="input_display_rack_num">展架位：%1$s</string>
    <string name="ordered"><![CDATA[已预约>]]></string>
    <string name="address_detail">场地详情</string>
    <string name="association_leader">社长</string>
    <string name="association_vice_leader">副社长</string>
    <string name="association_tutor">指导老师</string>
    <string name="activity_theme">活动主题</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="follow">关注</string>
    <string name="follow_toast">关注成功</string>
    <string name="has_follow">已关注</string>
    <string name="has_follow_toast">取消关注成功</string>
    <string name="sign">签到</string>
    <string name="sign_immediate">立即签到</string>
    <string name="sign_notice">签到说明</string>
    <string name="send">发送</string>
    <string name="activity_detail">活动详情</string>
    <string name="come_tochat">来聊天呗</string>
    <string name="activity_member">活动成员</string>
    <string name="wonderful_moment">精彩瞬间</string>
    <string name="hold_association">举办社团：</string>
    <string name="vote">投票</string>
    <string name="vote_immediate">立即投票</string>
    <string name="input_score_tip">您如果对活动有什么意见和建议，请大胆的写出来， 我们一定努力将活动办得越来越好，感谢！</string>
    <string name="message_center">消息中心</string>
    <string name="clear">清空</string>
    <string name="back">返回</string>
    <string name="qr_flush_tip">二维码30秒刷新一次</string>
    <string name="mine_qr_code">我的二维码</string>
    <string name="association_qr_code">社团二维码</string>
    <string name="activity_qr_code">活动二维码</string>
    <string name="qr_code_scan">二维码扫描</string>
    <string name="sign_mode">签到方式</string>
    <string name="sign_mode_code">签到码</string>
    <string name="sign_mode_scan">扫码签到</string>
    <string name="sign_mode_gesture">手势签到</string>
    <string name="sign_desc_tip">签到说明：</string>
    <string name="input_remarks_tip">可选填</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="confirm">确定</string>
    <string name="watch_pwd">查看密码</string>
    <string name="logo">logo</string>
    <string name="or">or</string>
    <string name="qq_login">QQ登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="activity_focus">活动中跑马灯</string>
    <string name="top_stick">置顶</string>
    <string name="notice">公告</string>
    <string name="association_share">分享社团</string>
    <string name="association_exit">退出社团</string>
    <string name="activity_share">分享活动</string>
    <string name="activity_exit">取消报名</string>
    <string name="activity_sign">活动签到</string>
    <string name="activity_sign_exit">活动签退</string>
    <string name="activity_publish_moment">发布动态</string>
    <string name="activity_sign_manage">签到管理</string>
    <string name="all_moments">全部动态</string>
    <string name="my_moments">我的动态</string>
    <string name="old_password">旧密码</string>
    <string name="input_old_password_tip">请输入旧密码</string>
    <string name="new_password">新密码</string>
    <string name="input_new_password_tip">请输入新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_new_password_confirm_tip">请再次输入新密码</string>
    <string name="about_us_content">\t\t\t\t“塔联社”的设计初衷是为当代大学生提供成长服务,帮助大学生从学生党向符合社会需求的职业人的转变，即将象牙塔与社会连接的一个互联网应用平台，同时积极响应团中央提出的“第二课堂成绩单”政策，融合各个高校育人理念，提供个性化的育人品牌。高校学生凭借唯一识别信息登陆平台，通过塔联社参加线上线下活动获得第二课堂学分，利用塔联社线上线下活动的现场互动等功能，开展符合互联网时代特点的社团活动，通过平台还能够与企业对接，获得培训、创就业等的机会。</string>
    <string name="about_us_copyright">\t\t\t\t\t塔联社科技有限公司 版权所有\nhttp://www.talianshe.cn All Rjghts Reserved</string>
    <string name="association_leader_holder">社长：%1$s</string>
    <string name="association_vice_leader_holder">副社长：%1$s</string>
    <string name="association_tutor_holder">主导老师：%1$s</string>
    <string name="association_vice_tutor_holder">辅导老师：%1$s</string>
    <string name="association_creator_holder">社团创始人：%1$s</string>
    <string name="association_create_time_holder">社团创建日期：%1$s</string>
    <string name="association_desc_holder">社团简介：%1$s</string>
    <string name="association_read_num_holder">阅读量：%1$s</string>
    <string name="activity_desc_holder">活动简介：%1$s</string>
    <string name="activity_type_holder">活动类型：%1$s</string>
    <string name="activity_regist_end_time">报名截止时间：%1$s</string>
    <string name="sign_time_holder">活动前%1$d分钟开始签到</string>
</resources>