<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/tv_leader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/dark_gray"
        android:text="@string/association_leader_holder"
        />
    <TextView
        android:id="@+id/tv_vice_leader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textSize="12sp"
        android:textColor="@color/dark_gray"
        android:text="@string/association_vice_leader_holder"
        />
    <TextView
        android:id="@+id/tv_tutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textSize="12sp"
        android:textColor="@color/dark_gray"
        android:text="@string/association_tutor_holder"
        />
    <TextView
        android:id="@+id/tv_vice_tutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textSize="12sp"
        android:textColor="@color/dark_gray"
        android:text="@string/association_vice_tutor_holder"
        />
    <TextView
        android:id="@+id/tv_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textSize="12sp"
        android:textColor="@color/dark_gray"
        android:text="@string/association_creator_holder"
        />
    <TextView
        android:id="@+id/tv_create_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textSize="12sp"
        android:textColor="@color/dark_gray"
        android:text="@string/association_create_time_holder"
        />
    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textSize="12sp"
        android:textColor="@color/dark_gray"
        android:text="@string/association_desc_holder"
        />
    <TextView
        android:id="@+id/tv_read_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:textSize="12sp"
        android:textColor="@color/dark_gray"
        android:text="@string/association_read_num_holder"
        />
</LinearLayout>