<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_mobile_tip"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/captcha"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_captcha_tip"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_get_captcha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_captcha"
            android:textColor="@color/theme_color"
            android:textSize="13sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_login_password_tip"
            android:maxLines="1"
            android:password="true"
            android:singleLine="true"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/btn_theme_bg"
        android:text="@string/commit"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
</LinearLayout>
