<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_activity_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_desc_holder"
        android:textColor="@color/dark_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_activity_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/activity_type_holder"
        android:textColor="@color/dark_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_activity_registration_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/activity_regist_end_time"
        android:textColor="@color/dark_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_sign_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/sign_time_holder"
        android:textColor="@color/dark_gray"
        android:textSize="12sp" />
</LinearLayout>