<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textSize="13sp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/et_real_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_full_name_tip"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="13sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="13sp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_password_tip"
            android:maxLines="1"
            android:singleLine="true"
            android:password="true"
            android:textSize="13sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm"
            android:textSize="13sp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/et_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_password_confirm_tip"
            android:maxLines="1"
            android:password="true"
            android:singleLine="true"
            android:textSize="13sp" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/btn_theme_bg"
        android:text="@string/next_step"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
</LinearLayout>
