<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingEnd="15dp"
        android:paddingStart="15dp">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_old_password_tip"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:singleLine="true"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingEnd="15dp"
        android:paddingStart="15dp">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_new_password_tip"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:singleLine="true"
            android:textSize="13sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingEnd="15dp"
        android:paddingStart="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_new_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_new_password_confirm_tip"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:singleLine="true"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/btn_theme_bg"
        android:text="@string/commit"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
</LinearLayout>
